# ericfinance

./: .gitignore  README.md  drizzle.config.ts  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pr-check.yml
apps/web/: .gitignore  index.html  package.json  playwright.config.ts  vite.config.ts
e2e/: accounts.spec.ts  database.spec.ts  smoke.spec.ts
e2e/fixtures/: index.ts
e2e/helpers/: AccountPage.ts  fixtures.ts
e2e/page-objects/: AccountDetailPage.ts  AccountPage.ts  SettingsPage.ts
e2e/specs/: account-detail.spec.ts  accounts.spec.ts  database.spec.ts
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  setup.sql  tauri.conf.json
src-tauri/src/: encryption.rs  lib.rs  main.rs  portfolio.rs
src/components/: app-sidebar.tsx  create-transaction-dialog.tsx  date-picker.tsx  db-select.tsx  file-metadata-display.tsx  google-drive-database-selector.tsx  icon.tsx  import-dialog.tsx  net-worth-chart.tsx  new-transaction-form.tsx  password-dialog.tsx  portfolio-select.tsx  portfolio-switcher.tsx  side-header.tsx  transactions-table-filter-button.tsx  transactions-table.tsx
src/context/: db.ts
src/features/: portfolio.ts
src/hooks/: form.ts  use-infinite-transactions.ts  use-query.ts
src/lib/: date.ts  google-drive-api.ts  portfolio.ts  types.ts  utils.ts
src/pages/: Import.tsx  Settings.tsx
src/providers/: db.tsx  query.tsx
src/routes/: __root.tsx  _sidebar.tsx  index.tsx
tests/: basic.test.ts
(+259 files in other folders)
