[package]
name = "ericfinance"
version = "0.1.0"
description = "Offline personal finance app"
authors = ["Eric Minassian <eric@ericminassian.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ericfinance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
rusqlite = { version = "0.33.0", features = ["sqlcipher", "bundled-sqlcipher"] }

[dev-dependencies]
tempfile = "3.16.0"
